--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock & Metal Genealogy</title>
+    <title>AudioX | Musical DNA Engine</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- 
+      MONETIZATION (Skimlinks/Sovrn): 
+      Paste your installation script here. 
+      It will automatically monetize the eBay, Ticketmaster, and Merch links generated in the app.
+    -->
+    
     <style>
       body {
         background-color: #050505; /* Deep Space Black */
